# RLdC-Trading-bot

./: .env.example  .gitignore  API_DOCUMENTATION.md  GATEWAY_README.md  IMPLEMENTATION_SUMMARY.md  KODALL.txt  PROJECT_AUDIT_MASTER.md  README.md  README_INFO.txt  SECURITY_SUMMARY.md  ai_analyzer.py  ai_automl.py  ai_code_auditor.py  ai_optimizer.py  ai_settings.py  analyzer_merged.py  app.py  app_corrected.py  app_merged.py  auto_trader.py  backend.py  backtesting.py  binance_integration.py  binance_trader.py  blockchain_analysis.py  config.json  config.json.example  config_manager.py  dashboard.py  database.py  deep_rl_trader.py  demo_trading.py  gateway_server.py  gpt_market_analysis.py  index.html  indicators.py  installer.py  kompiluj_pliki.sh  log.txt  main.py  (+25 more)
api/: main.py
auth/: 2fa.py  oauth.py  security.py  two_fa.py
backend/: admin.py  config.py  database.py  login.py  notifications.py  requirements.txt  signals.py  trading.py  transactions.py
css/: style.css
data/: market_data.py
docs/: API_GATEWAY.md  ARCHITECTURE.md  CHANGELOG.txt  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LOCAL_PACKAGE.md  QUICKSTART.md  REPO_AUDIT_PROCESS.md  SETUP_UBUNTU.md  TESTING.md  guide.md
flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
frontend/: index.html  login.html  scripts.js  styles.css
frontend_pwa/: README.md  index.html  manifest.webmanifest  sw.js
migrations/: migrate_sqlite_to_postgres.py
modules/: ai_analysis.py  ai_strategy.py  binance_api.py  binance_service.py  routes.py
nginx/: rldc_app.conf
node_trading_bot/: README.md  package.json  server.js
reports/: audit_report.json  audit_report.md
(+86 files in other folders)
